# Order-Matching-Engine

./: Application.cpp  Application.h  CMakeLists.txt  LiveMetricsProducer.h  README.md  ThreadAssignmentManager.h  config.xml  main.cpp  samples.csv
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
Config/: ConfigReader.cpp  ConfigReader.h
OrderBook/: OrderBook.cpp  OrderBook.h  OrderBook_Registry.cpp
OrderBook/Order/: Order.h  Types.h  Validation.cpp  Validation.h
OrderBook/OrderTracker/: OrderTracker.cpp  OrderTracker.h
OrderBook/PriceLevel/: PriceLevel.cpp  PriceLevel.h
Pipeline/: ExecutionHandler.h  FinalizeHandler.h  Handler.h  Pipeline.h  PipelineFactory.h  PrepareConditionHandler.h  ProcessingContext.h  TifAdjustHandler.h  ValidationHandler.h
Scheduler/: OrderBookScheduler.cpp  OrderBookScheduler.h  OrderInjectorScheduler.cpp  OrderInjectorScheduler.h  Scheduler.cpp  Scheduler.h
Scheduler/Worker/: Task.h  Worker.cpp  Worker.h
Strategies/: Strategies.h  StrategyCache.h
docs/: Order Book Data Structures.md  Order-Macthing.md  OrderType.md  TIF.md
scripts/: build.sh  run.sh
